--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "good-console": "^5.3.1",
     "hapi": "^13.3.0",
     "hapi-sparql": "^0.1.1",
-    "sparql-http-client": "^0.1.0"
+    "sparql-http-client": "^0.1.0",
+    "uuid": "^2.0.2"
   }
 }
