--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-core": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-1": "^6.5.0",
+    "babel-runtime": "^6.6.1",
     "good": "^6.6.0",
     "good-console": "^5.3.1",
     "hapi": "^13.3.0",
