--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 
 install:
   - npm install
-  - npm install -g codeclimate-test-reporter
+  - npm install -g codeclimate-test-reporter codecov
 
 script:
   - npm run lint
@@ -17,3 +17,4 @@ script:
 
 after_script:
   - codeclimate-test-reporter < coverage/lcov.info
+  - codecov
