--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mocha.parallel": "^0.12.0",
     "nock": "^8.0.0",
     "nodemon": "^1.9.1",
+    "pre-git": "^3.8.3",
     "standard": "^7.0.1"
   },
   "dependencies": {
@@ -55,5 +56,15 @@
     "hapi-sparql": "^1.0.0",
     "sparql-http-client": "^0.1.0",
     "uuid": "^2.0.2"
+  },
+  "config": {
+    "pre-git": {
+      "pre-commit": [
+        "npm run lint -s"
+      ],
+      "pre-push": [
+        "npm run lint -s"
+      ]
+    }
   }
 }
