--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "standard": {
     "parser": "babel-eslint",
     "globals": [
+      "after",
+      "before",
+      "describe",
       "it"
     ]
   },
@@ -14,7 +17,7 @@
     "start": "babel-node src/index.js",
     "test": "mocha --compilers js:babel-core/register --recursive",
     "test:watch": "npm run test -- --watch",
-    "test:cov": "isparta cover _mocha --root src --include-all-sources -- --compilers js:babel-core/register --recursive",
+    "test:cov": "isparta cover _mocha --root src --include-all-sources -x index.js -- --compilers js:babel-core/register --recursive",
     "lint": "standard"
   },
   "repository": {
@@ -30,23 +33,38 @@
   "homepage": "https://git.tenforce.com/mu-semtech/mu-hapi-template",
   "devDependencies": {
     "babel-eslint": "^6.0.2",
+    "babel-plugin-transform-runtime": "^6.8.0",
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "isparta": "^4.0.0",
     "mocha": "^2.4.5",
     "mocha.parallel": "^0.12.0",
+    "nock": "^8.0.0",
     "nodemon": "^1.9.1",
-    "standard": "^6.0.8"
+    "pre-git": "^3.8.3",
+    "standard": "^7.0.1"
   },
   "dependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-1": "^6.5.0",
+    "babel-runtime": "^6.6.1",
     "good": "^6.6.0",
     "good-console": "^5.3.1",
     "hapi": "^13.3.0",
-    "hapi-sparql": "^0.1.1",
+    "hapi-sparql": "^1.0.0",
     "sparql-http-client": "^0.1.0",
     "uuid": "^2.0.2"
+  },
+  "config": {
+    "pre-git": {
+      "pre-commit": [
+        "npm run lint -s"
+      ],
+      "pre-push": [
+        "npm run lint -s"
+      ]
+    }
   }
 }
