--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "dev": "nodemon src/index.js --watch src/ --exec babel-node",
     "start": "babel-node src/index.js",
-    "test": "mocha --compilers js:babel-core/register --recursive",
+    "test": "mocha --colors --compilers js:babel-core/register --recursive",
     "test:watch": "npm run test -- --watch",
     "test:cov": "isparta cover _mocha --root src --include-all-sources -x index.js -- --compilers js:babel-core/register --recursive",
     "lint": "standard"
