--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - /app/node_modules
       - ./package.json:/app/package.json
-      - ./src:/app/src
+      - ./src/routes:/app/src/routes
       - ./test:/app/test
     ports:
       - 3000:3000
