Makes src/ a plugin
This change is relevant if you want to have more control on your
micro service. Now you can register authentication strategies for
instance.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,7 +6,8 @@ services:
     volumes:
       - /app/node_modules
       - ./package.json:/app/package.json
-      - ./src/routes:/app/src/routes
+      - ./.babelrc:/app/.babelrc
+      - ./src:/app/src
       - ./test:/app/test
     ports:
       - 3000:3000
