--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "app-module-path": "^1.1.0",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
-    "babel-plugin-transform-runtime": "^6.8.0",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-runtime": "^6.6.1",
