--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,6 +2,7 @@ version: "2"
 services:
 
   template:
+    command: sh -c "npm install && exec npm run dev"
     build: .
     volumes:
       - /app/node_modules
