--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "babel-node server.js",
     "test": "mocha --colors --compilers js:babel-core/register --recursive -r ./test/test-helper.js",
     "test:watch": "npm run test -- --watch",
-    "test:cov": "isparta cover _mocha --root src --include-all-sources -- --compilers js:babel-core/register --recursive -r ./test/test-helper.js",
+    "test:cov": "babel-node node_modules/.bin/babel-istanbul cover _mocha --root src -- --recursive -r ./test/test-helper.js",
     "lint": "standard"
   },
   "repository": {
@@ -34,9 +34,9 @@
   "homepage": "https://github.com/mu-semtech/mu-javascript-template",
   "devDependencies": {
     "babel-eslint": "^6.0.2",
+    "babel-istanbul": "^0.8.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
-    "isparta": "^4.0.0",
     "mocha": "^2.4.5",
     "mocha.parallel": "^0.12.0",
     "nock": "^8.0.0",
