--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mu-hapi-template",
   "version": "1.0.0",
   "description": "Template for running hapi microservices",
-  "main": "src/index.js",
+  "main": "server.js",
   "standard": {
     "parser": "babel-eslint",
     "globals": [
@@ -13,11 +13,11 @@
     ]
   },
   "scripts": {
-    "dev": "nodemon src/index.js --watch src/ --exec babel-node",
-    "start": "babel-node src/index.js",
-    "test": "mocha --colors --compilers js:babel-core/register --recursive",
+    "dev": "nodemon server.js --watch src/ --exec babel-node",
+    "start": "babel-node server.js",
+    "test": "mocha --colors --compilers js:babel-core/register --recursive -r babel-polyfill -r app-module-path/cwd",
     "test:watch": "npm run test -- --watch",
-    "test:cov": "isparta cover _mocha --root src --include-all-sources -x index.js -- --compilers js:babel-core/register --recursive",
+    "test:cov": "babel-node node_modules/.bin/babel-istanbul cover _mocha --root src -- --recursive -r babel-polyfill -r app-module-path/cwd",
     "lint": "standard"
   },
   "repository": {
@@ -34,9 +34,9 @@
   "homepage": "https://github.com/mu-semtech/mu-javascript-template",
   "devDependencies": {
     "babel-eslint": "^6.0.2",
+    "babel-istanbul": "^0.8.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
-    "isparta": "^4.0.0",
     "mocha": "^2.4.5",
     "mocha.parallel": "^0.12.0",
     "nock": "^8.0.0",
@@ -44,9 +44,10 @@
     "standard": "^7.0.1"
   },
   "dependencies": {
+    "app-module-path": "^1.1.0",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
-    "babel-plugin-transform-runtime": "^6.8.0",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-runtime": "^6.6.1",
