--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
   "dependencies": {
     "express": "^4.14.0"
   },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2016": "^6.16.0",
+    "babel-preset-es2017": "^6.16.0"
+  },
   "author": "Aad Versteden <aad.versteden@gmail.com>",
   "license": "MIT",
   "homepage": "https://mu.semte.ch"
