--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-es2017": "^6.16.0",
-    "supervisor": "^0.12.0"
+    "supervisor": "^0.12.0",
+    "sparql-client-2": "^0.6.0"
   },
   "author": "Aad Versteden <aad.versteden@gmail.com>",
   "license": "MIT",
