--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mu-semtech"
   ],
   "dependencies": {
+    "body-parser": "~1.15.1",
     "express": "^4.14.0"
   },
   "devDependencies": {
