--- a/helpers/mu/package.json
+++ b/helpers/mu/package.json
@@ -10,6 +10,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-es2017": "^6.16.0",
-    "supervisor": "^0.12.0"
+    "supervisor": "^0.12.0",
+    "uuid": "^3.0.0"
   }
 }
