--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
     "mu-semtech"
   ],
   "dependencies": {
-    "body-parser": "~1.15.1",
-    "express": "^4.14.0"
-  },
-  "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-es2017": "^6.16.0",
+    "body-parser": "~1.15.1",
+    "express": "^4.14.0",
     "supervisor": "^0.12.0",
     "sparql-client-2": "^0.6.0"
   },
