--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mu-javascript-template",
-  "version": "0.2.0",
+  "version": "1.2.1",
   "description": "Template for mu services written in JavaScript",
   "scripts": {
     "dev": "nodemon server.js --watch src/ --exec babel-node",
@@ -20,8 +20,8 @@
     "babel-preset-es2017": "^6.16.0",
     "body-parser": "~1.15.1",
     "express": "^4.14.0",
-    "supervisor": "^0.12.0",
-    "sparql-client-2": "^0.6.0"
+    "sparql-client-2": "^0.6.0",
+    "supervisor": "^0.12.0"
   },
   "author": "Aad Versteden <aad.versteden@gmail.com>",
   "license": "MIT",
