--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "body-parser": "~1.15.1",
     "express": "^4.14.0",
     "express-http-context": "~1.0.2",
-    "sparql-client-2": "^0.6.0",
+    "sparql-client-2": "https://github.com/erikap/node-sparql-client.git",
     "supervisor": "^0.12.0"
   },
   "author": "Aad Versteden <aad.versteden@gmail.com>",
