--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.3.5",
   "description": "Template for mu services written in JavaScript",
   "scripts": {
-    "dev": "nodemon server.js --watch src/ --exec babel-node",
-    "start": "node app.js"
+    "start": "nodemon --exec \"babel-node --experimental-modules --inspect=0.0.0.0:9229\" app.js"
   },
   "repository": {
     "type": "git",
@@ -13,16 +12,20 @@
   "keywords": [
     "mu-semtech"
   ],
+  "type": "module",
   "dependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2016": "^6.16.0",
-    "babel-preset-es2017": "^6.16.0",
-    "body-parser": "~1.15.1",
-    "express": "^4.14.0",
-    "express-http-context": "~1.0.2",
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+
+    "body-parser": "~1.19.0",
+    "express": "^4.17.1",
+    "express-http-context": "~1.2.3",
+    "nodemon": "2.0.2",
     "sparql-client-2": "https://github.com/erikap/node-sparql-client.git",
-    "supervisor": "^0.12.0"
+    "uuid": "7.0.0"
   },
   "author": "Aad Versteden <aad.versteden@gmail.com>",
   "license": "MIT",
