--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.3.5",
   "description": "Template for mu services written in JavaScript",
   "scripts": {
-    "start": "nodemon --exec \"babel-node --experimental-modules --inspect=0.0.0.0:9229\" app.js"
+    "daemon": "nodemon --watch /app --ext js,mjs,cjs,json --exec ./run.sh",
+    "babel-node-dev": "babel-node --inspect=0.0.0.0:9229 ./app/app.js",
+    "babel-node-prod": "babel-node ./app/app.js"
   },
   "repository": {
     "type": "git",
@@ -12,14 +14,15 @@
   "keywords": [
     "mu-semtech"
   ],
-  "type": "module",
   "dependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "babel-plugin-module-resolver": "4.0.0",
+    
     "body-parser": "~1.19.0",
     "express": "^4.17.1",
     "express-http-context": "~1.2.3",
