--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.3.5",
   "description": "Template for mu services written in JavaScript",
   "scripts": {
+    "build": "babel ./ --ignore \"./prod\",\"./node_modules\" --out-dir ./prod",
+    "node-prod": "node ./prod/app/app.js",
     "daemon": "nodemon --watch /app --ext js,mjs,cjs,json --exec ./run.sh",
     "babel-node-dev": "babel-node --inspect=0.0.0.0:9229 ./app/app.js",
     "babel-node-prod": "babel-node ./app/app.js"
