--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.3.5",
   "description": "Template for mu services written in JavaScript",
   "scripts": {
-    "build": "babel ./ --ignore \"./prod\",\"./node_modules\" --out-dir ./prod",
-    "node-prod": "node ./prod/app/app.js",
+    
     "daemon": "nodemon --watch /app --ext js,mjs,cjs,json --exec ./run.sh",
-    "babel-node-dev": "babel-node --inspect=0.0.0.0:9229 ./app/app.js",
-    "babel-node-prod": "babel-node ./app/app.js"
+    
+    "babel-node-dev": "babel-node --inspect=0.0.0.0:9229 ./start-dev.js",
+    
+    "build": "babel ./ --ignore \"./start-prod.js\",\"./start-dev.js\",\"./prod\",\"./node_modules\" --out-dir ./prod",
+
+    "node-prod": "node ./start-prod.js"
   },
   "repository": {
     "type": "git",
