--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mu-javascript-template",
-  "version": "1.4.0",
+  "version": "1.5.0-beta.1",
   "description": "Template for mu services written in JavaScript",
   "repository": {
     "type": "git",
