--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "type": "git",
     "url": "git+https://github.com/mu-semtech/mu-javascript-template.git"
   },
+  "scripts": {
+    "test": "mocha --require @babel/register"
+  },
   "keywords": [
     "mu-semtech"
   ],
@@ -16,11 +19,13 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.15",
     "@babel/preset-env": "^7.14.1",
+    "@babel/register": "^7.13.16",
     "babel-plugin-module-resolver": "4.1.0",
     "body-parser": "~1.19.0",
     "env-var": "^7.0.0",
     "express": "^4.17.1",
     "express-http-context": "~1.2.4",
+    "mocha": "^8.4.0",
     "nodemon": "^2.0.7",
     "sparql-client-2": "https://github.com/erikap/node-sparql-client.git",
     "uuid": "^8.3.2"
