force mocha to exit when it thinks its done
since v4 To avoid false positives and encourage better testing practices, Mocha
will no longer automatically kill itself via process.exit() when it thinks it
should be done running.

While probably somewhat desirable behaviour during development, this is
definitely not wanted in a ci setting. for now forcing the old behaviour to
exit. this should probably be a flag though

see https://boneskull.com/mocha-v4-nears-release/#mochawontforceexit

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://github.com/mu-semtech/mu-javascript-template.git"
   },
   "scripts": {
-    "test": "mocha --require @babel/register"
+    "test": "mocha --require @babel/register --exit"
   },
   "keywords": [
     "mu-semtech"
