--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.15",
     "@babel/preset-env": "^7.14.1",
+    "@babel/preset-typescript": "^7.16.7",
     "babel-plugin-module-resolver": "4.1.0",
     "body-parser": "~1.19.0",
+    "coffeescript": "^2.6.1",
     "env-var": "^7.0.0",
     "express": "^4.17.1",
     "express-http-context": "~1.2.4",
     "nodemon": "^2.0.7",
     "sparql-client-2": "https://github.com/erikap/node-sparql-client.git",
+    "typescript": "^4.6.2",
     "uuid": "^8.3.2"
   },
   "author": "Aad Versteden <aad.versteden@gmail.com>",
