More consistent naming on dev build

--- a/babel.config.json
+++ b/babel.config.json
@@ -19,7 +19,7 @@
     }]
   ],
   "ignore": [
-    "./app/node_modules",
+    "./node_modules",
     "./intermediate-transpilation/node_modules"
   ]
 }
