--- a/babel.config.json
+++ b/babel.config.json
@@ -4,7 +4,8 @@
       {
         "targets": {
           "node": 14
-        }
+        },
+        "modules": false
       }
     ],
     ["@babel/preset-typescript"
