--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mu-javascript-template",
   "version": "1.5.0-beta.4",
   "description": "Template for mu services written in JavaScript",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mu-semtech/mu-javascript-template.git"
