--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -4,7 +4,7 @@
   
     "compilerOptions": {
       "lib": ["es2020"],
-      "module": "commonjs",
+      "module": "es2020",
       "target": "es2020",
       "allowJs": true,
       "noEmit": true,
