Sourcemaps in coffeescript and typescript for development
Pairing with @erikap

--- a/babel.config.json
+++ b/babel.config.json
@@ -7,22 +7,14 @@
         }
       }
     ],
-    ["@babel/preset-typescript"
-    ]
-    
+    ["@babel/preset-typescript"]
   ],
-  "sourceMaps": true,
   "plugins": [
     ["@babel/plugin-proposal-decorators", { legacy: true }],
-    ["@babel/plugin-proposal-class-properties"],
-    ["module-resolver", {
-      "alias": {
-        "mu": "/usr/src/output/helpers/mu/index.js"
-      }
-    }]
+    ["@babel/plugin-proposal-class-properties"]
   ],
   "ignore": [
     "./node_modules",
-    "./intermediate-transpilation/node_modules"
+    "/usr/src/output/built/node_modules"
   ]
 }
