--- a/babel.config.json
+++ b/babel.config.json
@@ -3,7 +3,8 @@
     ["@babel/preset-env",
       {
         "targets": {
-          "node": 14
+          "node": 16,
+		  "esmodules": true
         },
         "modules": false
       }
