add private class methods babel plugin (previously default supported )

--- a/babel.config.json
+++ b/babel.config.json
@@ -11,7 +11,8 @@
   ],
   "plugins": [
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
-    ["@babel/plugin-proposal-class-properties"]
+    ["@babel/plugin-proposal-class-properties"],
+    ["@babel/plugin-proposal-private-methods"]
   ],
   "ignore": [
     "./node_modules",
