--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/node": "^7.13.13",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.15",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/preset-env": "^7.14.1",
     "@babel/preset-typescript": "^7.16.7",
     "babel-plugin-module-resolver": "4.1.0",
