remove transforms for now included es2022 features

--- a/babel.config.json
+++ b/babel.config.json
@@ -10,9 +10,7 @@
     ["@babel/preset-typescript"]
   ],
   "plugins": [
-    ["@babel/plugin-proposal-decorators", { "legacy": true }],
-    ["@babel/plugin-proposal-class-properties"],
-    ["@babel/plugin-proposal-private-methods"]
+    ["@babel/plugin-proposal-decorators", { "legacy": true }]
   ],
   "ignore": [
     "./node_modules",
