--- a/babel.config.json
+++ b/babel.config.json
@@ -10,7 +10,7 @@
     ["@babel/preset-typescript"]
   ],
   "plugins": [
-    ["@babel/plugin-proposal-decorators", { "legacy": true }]
+    ["@babel/plugin-proposal-decorators", { "version": "2023-05" }]
   ],
   "ignore": [
     "./node_modules",
