--- a/.woodpecker/latest.yml
+++ b/.woodpecker/latest.yml
@@ -1,6 +1,7 @@
 steps:
   build-latest:
     image: woodpeckerci/plugin-docker-buildx
+    platforms: linux/amd64,linux/arm64
     settings:
       repo: ${CI_REPO/mu-semtech/semtech}
       tags: latest
