--- a/.woodpecker/release.yml
+++ b/.woodpecker/release.yml
@@ -1,6 +1,7 @@
 steps:
   build-release:
     image: woodpeckerci/plugin-docker-buildx
+    platforms: linux/amd64,linux/arm64
     settings:
       repo: ${CI_REPO/mu-semtech/semtech}
       tags: "${CI_COMMIT_TAG##v}"
