Work esmodule support assuming client package.json
When there's a package.json with `"type": "module"`, this approach
should support importing of esmodules.  It is based on #PR38 and likely
needs some extra polish.

--- a/babel.config.json
+++ b/babel.config.json
@@ -4,13 +4,15 @@
       {
         "targets": {
           "node": 18
-        }
+        },
+        "modules": false
       }
     ],
     ["@babel/preset-typescript"]
   ],
   "plugins": [
-    ["@babel/plugin-proposal-decorators", { "version": "2023-05" }]
+    ["@babel/plugin-proposal-decorators", { "version": "2023-05" }],
+    ["babel-plugin-add-import-extension"]
   ],
   "ignore": [
     "./node_modules",
