allow simple services without package json to also run mu script install so they can get rid of squiggly red lines too

--- a/scripts/config.json
+++ b/scripts/config.json
@@ -23,7 +23,7 @@
         "arguments": []
       },
       "environment": {
-        "image": "semtech/mu-javascript-template:2.0.0",
+        "image": "local-js-template",
         "interactive": false,
         "script": "install/run.sh"
       },
