--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "babel-plugin-module-resolver": "5.0.0",
     "body-parser": "~1.20.1",
     "coffeescript": "^2.6.1",
+    "digest-fetch": "^2.0.3",
     "env-var": "^7.0.0",
     "express": "^4.17.1",
     "express-http-context": "~1.2.4",
-    "nodemon": "^2.0.20",
-    "sparql-client-2": "https://github.com/erikap/node-sparql-client.git",
+    "nodemon": "^3.1.9",
     "typescript": "^4.6.2",
     "uuid": "^9.0.0"
   },
