Splitting up dependency installation
Co-author: @erikap

--- a/scripts/config.json
+++ b/scripts/config.json
@@ -28,7 +28,7 @@
         "script": "setup-ide/run.sh"
       },
       "mounts": {
-        "service": "/data/service"
+        "service": "/app"
       }
     }
   ]
