--- a/.woodpecker/feature.yml
+++ b/.woodpecker/feature.yml
@@ -1,11 +1,13 @@
 steps:
-  build-feature:
+  build-and-push:
     image: woodpeckerci/plugin-docker-buildx
     settings:
       repo: ${CI_REPO/mu-semtech/semtech}
-      tags: ${CI_COMMIT_BRANCH/\//-}
-      platforms: linux/amd64,linux/arm64
-    secrets: [ docker_username, docker_password ]
+      tags: "feature-${CI_COMMIT_BRANCH##feature/}"
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
 when:
-  branch: feature/*
-  event: push
+  - event: push
+    branch: [feature/*]
