--- a/.woodpecker/release.yml
+++ b/.woodpecker/release.yml
@@ -1,11 +1,14 @@
 steps:
-  build-release:
+  release:
     image: woodpeckerci/plugin-docker-buildx
     settings:
       repo: ${CI_REPO/mu-semtech/semtech}
       tags: "${CI_COMMIT_TAG##v}"
       platforms: linux/amd64,linux/arm64
-    secrets: [ docker_username, docker_password ]
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
 when:
-  event: tag
-  tag: v*
+  - event: tag
+    ref: refs/tags/v*
