Add script to add delta handler
This script at least ensures it looks the same in various services.  A more
streamlined solution may be preferred in the future.

--- a/scripts/config.json
+++ b/scripts/config.json
@@ -28,6 +28,21 @@
       "mounts": {
         "service": "/app"
       }
+    },
+    {
+      "documentation": {
+        "command": "add-delta-handler",
+        "description": "Sets up the delta handler for the scripts",
+        "arguments": []
+      },
+      "environment": {
+        "image": "ubuntu:25.10",
+        "interactive": false,
+        "script": "add-delta-handler/run.sh"
+      },
+      "mounts": {
+        "service": "/app"
+      }
     }
   ]
 }
