--- a/.woodpecker/feature.yml
+++ b/.woodpecker/feature.yml
@@ -1,13 +1,16 @@
 steps:
   build-and-push:
-    image: woodpeckerci/plugin-docker-buildx
+    image: redpencil/plugin-docker-buildx:latest
     settings:
       repo: ${CI_REPO/mu-semtech/semtech}
       tags: "feature-${CI_COMMIT_BRANCH##feature/}"
+      platforms: linux/amd64,linux/arm64
       username:
         from_secret: docker_username
       password:
         from_secret: docker_password
+      ssh_key:
+        from_secret: ssh_key
 when:
   - event: push
     branch: [feature/*]
