--- a/.woodpecker/release.yml
+++ b/.woodpecker/release.yml
@@ -1,6 +1,6 @@
 steps:
   release:
-    image: woodpeckerci/plugin-docker-buildx
+    image: redpencil/plugin-docker-buildx:latest
     settings:
       repo: ${CI_REPO/mu-semtech/semtech}
       tags: "${CI_COMMIT_TAG##v}"
@@ -9,6 +9,8 @@ steps:
         from_secret: docker_username
       password:
         from_secret: docker_password
+      ssh_key:
+        from_secret: ssh_key
 when:
   - event: tag
     ref: refs/tags/v*
