Always pull latest image

--- a/.woodpecker/latest.yml
+++ b/.woodpecker/latest.yml
@@ -1,6 +1,7 @@
 steps:
   build-and-push:
     image: redpencil/plugin-docker-buildx:latest
+    pull: true
     settings:
       repo: ${CI_REPO/mu-semtech/semtech}
       tags: latest
