--- a/.woodpecker/release.yml
+++ b/.woodpecker/release.yml
@@ -1,6 +1,7 @@
 steps:
   release:
     image: redpencil/plugin-docker-buildx:latest
+    pull: true
     settings:
       repo: ${CI_REPO/mu-semtech/semtech}
       tags: "${CI_COMMIT_TAG##v}"
